feat: add home module and migrate to sql migrations
